part2/e07/manifests/pg.statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: logging-namespace
  name: postgres-ss
spec:
  serviceName: postgres-service
  replicas: 1
  selector:
    matchLabels:
      app: dbapp
  template:
    metadata:
      labels:
        app: dbapp
    spec:
      containers:
        - name: postgres
          image: postgres:13.7-alpine
          ports:
            - name: web
              containerPort: 5432
          volumeMounts:
            - name: pg-data
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: pg-data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: local-path
        resources:
          requests:
            storage: 64Mi
