part2/e07/manifests/pingpong.service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: logging-namespace
  name: pingpong-service
spec:
  type: ClusterIP
  selector:
    app: pingpong
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 3000
